--- a/plugins/toolkit/package.json
+++ b/plugins/toolkit/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@smite/toolkit",
-  "version": "1.0.0",
-  "description": "SMITE Toolkit - Unified token optimization layer with RAG, mgrep, semantic search, and bug detection",
+  "version": "1.1.0",
+  "description": "SMITE Toolkit - Unified token optimization layer with semantic search, bug detection, and dependency analysis",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
