security: fix critical plugin vulnerabilities and sync versions
- Replace silent catch blocks with proper error logging in manifest loader
- Add path validation to prevent directory traversal in install hooks
- Fix version mismatches across marketplace and manifest files
- Add missing 'id' fields to all plugin manifests
- Replace MOBS references with agents plugin
- Add repository URLs to plugin manifests
- Enhance security with safe file operations and mode 0o755

--- a/plugins/agents/plugin-manifest.json
+++ b/plugins/agents/plugin-manifest.json
@@ -1,8 +1,10 @@
 {
+  "id": "agents",
   "name": "agents",
   "version": "4.2.0",
   "description": "Multi-agent orchestration system with spec-first development workflow",
-  "smite": "3.5.0",
+  "smite": "3.6.0",
+  "repository": "https://github.com/Pamacea/smite",
   "core": "1.0.0",
   "depends": ["core"],
   "provides": [
