--- a/plugins/implement/plugin-manifest.json
+++ b/plugins/implement/plugin-manifest.json
@@ -64,7 +64,7 @@
         "impl-python",
         "impl-go"
       ],
-      "description": "Technical subagents from MOBS plugin"
+      "description": "Technical subagents from agents plugin"
     }
   },
   "deprecations": {
